<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myactivities.LocationActivity">

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/latlon"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoLocation" />

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvPrecision"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/precision"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvAltitude"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/altitude"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecision" />

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvProvider"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/provider"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAltitude" />

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvSpeed"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/speed"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProvider" />

    <it.appero.esonero.myviews.MyTextView
        android:id="@+id/tvInfoLocation"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:textSize="22sp"
        android:text="@string/tvInfoLocation"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tvInfoLocation" />

    <it.appero.esonero.myviews.MyButton
        android:id="@+id/btnMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:text="@string/btnMaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeed" />

</android.support.constraint.ConstraintLayout>